# ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  refactor.md
.github/workflows/: ai-ci.yml
.handoff/: docs.md  e3.md  jira.md
app/: main.py
app/bootstrap/: load_presets.py
app/cache/: preset_cache.py
app/client/: embedding_client.py  llm_client.py
app/core/: config.py  db.py  errors.py  logging.py  security.py
app/repository/: ai_state_repo.py  context_embedding_repo.py  context_keyword_repo.py  keyword_preset_repo.py
app/schema/: context.py  llm.py  search.py
app/service/: context_processing.py  embedding_service.py  keyword_service.py  search_service.py
data/: keyword_preset.yaml
docs/: README.md  WORKLOG.md  architecture.md  context-processing.md  deletion-race-control.md  failure-recovery.md  integration-tests.md  keyword-preset.md  model-profile.md  partial-resume.md  personal-search.md  state-machine.md  version-race-control.md
docs/decisions/: ADR-001-immutable-context.md  ADR-002-is-deleted-cancelled.md  ADR-003-exact-cosine.md  ADR-004-keyword-preset-judgment.md  README.md
docs/implements/: 2026-07-23-architecture-diagrams.md  2026-07-23-fastapi-implementation.md  2026-07-23-keyword-matching-eval.md  2026-07-23-keyword-preset-seed.md  2026-07-24-e3-test-harness.md  README.md
tests/: README.md  builders.py  conftest.py  fakes.py  test_api.py  test_repo.py  test_unit.py
(+35 files in other folders)
