[project]
name = "pinlog-ai"
version = "0.1.0"
# 챗봇/GraphRAG 합류 대비 3.12로 고정(torch/transformers 등 wheel 안전판).
# 상한은 3.13 지원 확산 시 완화 재검토.
requires-python = ">=3.12,<3.13"

[tool.ruff]
line-length = 100
target-version = "py312"
# tools/는 팀이 실제 샘플로 재실행하는 실험 하네스(별도 브랜치 소유), data/는 YAML 시드.
# 실제 서비스 코드(app/)만 lint 대상으로 둔다.
extend-exclude = ["tools", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
# 루트를 sys.path에 넣어 app·tests 패키지를 import한다(CI에서 PYTHONPATH 없이 동작).
pythonpath = ["."]
